fixed alignment on vertical elements

--- a/assets/styles/settings.sass
+++ b/assets/styles/settings.sass
@@ -30,23 +30,51 @@
       border-color: #ffb6c1
       background: rgb(252, 227, 230)
 
+.new-env-var
+  margin-top: 20px
+
 a.env_var_add
   color: #ffffff
   background-color: #97a3aa
-  border: 1px solid #818e91
   border-radius: 4px
   padding: 8px 12px 8px 12px
   font-size: 13px
   line-height: 70px
 
+input.env-name
+  margin-left: 6px
+
+input.env-value
+  margin-left: 8px
+
 input
   display: inline-block
   width: 260px
   height: 20px
-  padding: 5px
+  padding: 0 5px 0 5px
   background-color: #fff
   border: 1px solid #ddd
   line-height: 17px
   font-size: 13px
   color: #999999
   text-align: left
+
+p.env-actions
+  margin-bottom: 35px
+
+input.submit-env-var
+  color: #ffffff
+  background-color: #7ea35a
+  border-radius: 4px
+  font-size: 13px
+  width: 60px
+  height: 32px
+  text-align: center
+  margin-right: 6px
+
+a.cancel-env-var
+  margin-left: 3px
+
+input[type="checkbox"]
+  display: inline-block
+  vertical-align: middle
